// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "170b8008f53312",
  "0c1dc4c931d1c1",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "0ce488d40ca43a",
  "05132ab7403468",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "155e8c3db4d986",
  "0a1b0f4bd8f20d",
  "02a776517f7993",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "0d295f8cde502e",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "01bf99e87db859",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "193b164639ff17",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "0535ec030bcd20",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "0770d4b3998fcc",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "1488ef13c2ba05",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "076572e8a6469d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "06fc74351c4400",
  "0f16afb3799454",
  "11738969c907ca",
  "1b8f37f2a9093b",
  "1e68f3ba53f571",
  "0485c50b93f58a",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "0ab6dad976f4d6",
  "1703c21c77e591",
  "1bfae6003d0120",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1e07425e0ceca5",
  "03adb629b9f6a2",
  "0801a3166655dd",
  "1469df7798eb23",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "127831c33e9870",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "0e2eb4f1bf33c0",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "042cb9e8865bd4",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1062c7227643cb",
  "1e1b9a02c20fb9",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "17289c66a62109",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "150482ee07be66",
  "0c2536c1434f80",
  "19198c737937c2",
  "1f76c94b1d47bb",
  "06c519926b92bd",
  "11d2c8fb928a4a",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1e4ca9d8b19100",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "025dc26c5fcfdc",
  "0807bbec8a25b9",
  "1b1961c4577aad",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "0526c3e248c604",
  "00f9fa180e3660",
  "05404ea99a8c96",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "011e3784b6244b",
  "05650d09c80472",
  "09bb7b6b44a6f4",
  "1d54a658a6c9dc",
  "13a4596cefe1b0",
  "1de48df85fb3e9",
  "024d4ea446736f",
  "15e086a63ac0a6",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "001622b87364f7",
  "0454ec37cb69b5",
  "0e3b7df8db6da7",
  "1609195dbf320a",
  "1b089453084835",
  "19d409d40da594",
  "02717ab0a86321",
  "132f41736829c8",
  "0bde8979ee2f85",
  "12da942897714e",
  "1ce93ec9cd9d3d",
  "0a6cd1bafcf66c",
  "1a2f3d1d2832a5",
  "1ea7fa71f7f897",
  "1d0e7194e178ea",
  "157c53371bed28",
  "1fe2c4a83e8893",
  "04867d04e87cd1",
  "06fa1554d1b136",
  "12d872e2023618",
  "12cd73274b3c59",
  "1c0c003bf07f13",
  "10746ca67a47fb",
  "0a0b303d49bd69",
  "13ae7795edc2b8",
  "0066209dac1245",
  "0601462a3b59bc",
  "01f4fa00718c4d",
  "1ddd46ed7ca87a",
  "028505396a3830",
  "0b104211259da9",
  "01ff385cee5d14",
  "098bebd15f4c16",
  "0ab92f6f94f795",
  "02f1ee53c58237",
  "1d51c8401635a4",
  "10506717147790",
  "0b9fb0596b9c15",
  "1a8bdf81015c5b",
  "1fc2d5f9757cf5",
  "152e8d77477d2f",
  "139200cccbf0c3",
  "04e0636d5d2c0a",
  "13bd5ee554f21f",
  "02cacde3909378",
  "13fa413c0a0c53",
  "06f80d0e2584a3",
  "18c7c2b295f8d4",
  "138fe310ec173d",
  "0e8aec3090851d",
  "1d464ff13e4749",
  "070bab9f41a149",
  "052b2e3f1d7d89",
  "032b67c6704e85",
  "03f24e53364473",
  "185106d77f4635",
  "192b0109766691",
  "056569626d91d8",
  "15fb8cd1d28270",
  "05b05a65c5c3bd",
  "18b2ebe111b0b0",
  "0832bc1891481e",
  "0159e25046112e",
  "0d7cf88751f812",
  "10aa8d3013c5c5",
  "0dbac1e1e5d00e",
  "07d4ce7218b5e3",
  "11b4a0fc67568d",
  "1afcf2ee62a617",
  "03c1201cf9d20b",
  "0c3d008e99e962",
  "02ab7904558b3c",
  "0107617689c753",
  "135fa96a86ec14",
  "04b2cd82667710",
  "0d80fd3b2bf08e",
  "156b9615f6de54",
  "16cc04a8827f32",
  "1df78f327d55c7",
  "0f950ea1836dd3",
  "0f3e17083daa06",
  "080c6a9b0c01bc",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "1e94425e6771c5",
  "1421d152456a3a",
  "0c42a5d000f468",
  "0458e5a1bb4790",
  "1fb1a94668bb22",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "00ab87e6bfd815",
  "0b3ef80297a3a1",
  "054a2bf467369e",
  "0e6b095c5c3bce",
  "06ddb3ce632e8b",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "1b06c10fd069cf",
  "08edcce0dd4385",
  "1cb340c1159e36",
  "00008b9482c8a4",
  "1f378209e83279",
  "1d6795a5e87a35",
  "08f1126df556d5",
  "0883dac6baf369",
  "13d92157763150",
  "0a06cf6d82c32c",
  "1975fe3f0e8b97",
  "0ec0a3b494bb84",
  "0d8e352132ef0b",
  "110662c650e9e3",
  "0b82f299464775",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "06c7895497a640",
  "1fc37e759e3a22",
  "01b92d270831fb",
  "14f404cf83bffc",
  "19d635afcf1064",
  "12021635a06afd",
  "0ebd01af21ce66",
  "16304b5a4a5162",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1e27e042552371",
  "0316d54d446aa8",
  "013e425454dd4c",
  "0f0a21393d6879",
  "1d24e4b25e2b05",
  "0f798ca95ae623",
  "18c5f156a6c9df",
  "06a41ec9efaa55",
  "0cc7d542decb6e",
  "1d6ec92562bac9",
  "00791f60245386",
  "1aeb1a24049840",
  "0d6e868c78c2f0",
  "0e2166d7f66b36",
  "0490327e13629c",
  "014b927ef11857",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "1ceccc98074671",
  "1769a2773c0003",
  "1422f160ecb2ad",
  "0e2ccf25b35e30",
  "1e8fcaa7a6910c",
  "040a4e4f024ead",
  "0ba009cf59ae9c",
  "0d8376b74a285a",
  "10d71f05e2a8cf",
  "1eeee4a748ebf4",
  "0f6da6475a9b00",
  "1280702bf87bde",
  "0ab7059d4eb0a0",
  "1d5fb51c55699a",
  "0e0256d26c9dfc",
  "0670c18661082c",
  "19765d799fd7aa",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "0b1e0457f48d4c",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "0960914e5bcb77",
  "1aaf411b421dab",
  "150898c71a1a97",
  "1c295617e904b9",
  "0ca5a4cb7c5bb4",
  "0ab0b4ef9e9766",
  "1af6153285bfe6",
  "19c94adc45f7b1",
  "0b5dab69178e0b",
  "1e89f743d9ac93",
  "168be1da18953d",
  "06dc1edff14c9c",
  "0f87b0ac210899",
  "100d2ea572ab5b",
  "051cb9dda50b97",
  "0b864790797f5f",
  "17fda2c672d06a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "170b8008f53312",
  "05650d09c80472",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "1ce93ec9cd9d3d",
  "0a1b0f4bd8f20d",
  "1a2f3d1d2832a5",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "06fa1554d1b136",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "0601462a3b59bc",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "0ab92f6f94f795",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "1a8bdf81015c5b",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "138fe310ec173d",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "056569626d91d8",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "11b4a0fc67568d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "0f3e17083daa06",
  "0f16afb3799454",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "1703c21c77e591",
  "0b3ef80297a3a1",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "1f378209e83279",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "14f404cf83bffc",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "013e425454dd4c",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "0e2166d7f66b36",
  "0c2536c1434f80",
  "19198c737937c2",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1422f160ecb2ad",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "150898c71a1a97",
  "00f9fa180e3660",
  "0ca5a4cb7c5bb4",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "08943c8b8ce9f9",
  "03498bf4e647f9",
  "0ed01dfe7e46c4",
  "14099c0da319b0",
  "0925c4b7dc6019",
  "14d52042a54926",
  "1dc0597292d059",
  "1916fb8cd384a2",
  "0af1d1e7f6ddff",
  "1171771409bf9f",
  "11dc69035271fc",
  "04022e09bd4c9c",
  "08ebe059dddac0",
  "17b90721f1904d",
  "07e75ef2197ccb",
  "0dbfbbbb45c618",
  "1bbd5c7336862f",
  "0c206f98f57e77",
  "0a4bc8f96617cd",
  "1a653b28d330c4",
  "0a76f4b49ef9b2",
  "17265b2ab61293",
  "07712109d689c0",
  "1833f35926bc40",
  "1796583ca915a4",
  "0d44992bbf9ceb",
  "1f51a95d26e9a7",
  "0ae3779d3e36ae",
  "0edbf278672742",
  "000000484afe93",
  "17c960431a475b",
  "0e4bd3d1592472",
  "17c9e604006d53",
  "0b061b7af31f89",
  "0606fcfd19c0db",
  "15943207a5dba2",
  "197ac3fc5e9969",
  "0b45d49f6e3948",
  "1c194f27c1c80b",
  "1308de259c8ee1",
  "010c18032b4eec",
  "020fea4b5e53d7",
  "1b5558b83d0289",
  "12b1c197270d10",
  "1736eb19596386",
  "0234609fe4708a",
  "13d1bde616e338",
  "17b8c73e7902c4",
  "0f5a106c46daff",
  "061c7a790875a1",
  "0313b787d54a0b",
  "1b22f77e8a07f8",
  "09faf45c1beefb",
  "03f97d98ba9157",
  "1fca2852d5ba07",
  "0ed9186fac726e",
  "18b39be25161d3",
  "02e3d1d0abd2c2",
  "138c3b668c6c23",
  "0c0fbd78c9dab9",
  "19d816ebc51ca4",
  "002c96be6954d3",
  "1746ecb19c2883",
  "1d086bb6e6721b",
  "1a8d06acd99b03",
  "00b0c9f673261a",
  "1c00603c163eae",
  "012e64fe64964a",
  "1a50af83620e3c",
  "03f25749460501",
  "10fee50d659c2c",
  "1157e555dcbbb3",
  "0620834b34a77a",
  "0cfa023bec5de2",
  "174fd72ec9e67c",
  "0846dca8f85db5",
  "023348f294d0a0",
  "0eaf87dcc02ecd",
  "0cd9784588136f",
  "06ee2c1d18838d",
  "1ee789649eaf74",
  "05392735105ff7",
  "127a395adbf7c9",
  "048a9d5f782129",
  "0dd0349d84cff7",
  "18d018dff249ca",
  "1664ffd8fd5d72",
  "191c3c69637a61",
  "17e06bc8a9dd48",
  "11be06260b6186",
  "1754062606d146",
  "0335f15e23fb89",
  "0d90fa84d2b6c6",
  "15dc2d8cdf45d5",
  "0777e1f24cc0a2",
  "1ff9e5289e0d7f",
  "0f286b49f39543",
  "15de21adab79e0",
  "0863c83c5879b3",
  "0ceef63f391459",
  "02f912beaaadca",
  "1fb3d938555251",
  "1bda1d754c1dd7",
  "0bfaa7add19dc9",
  "1a5b38430fe80a",
  "1a87fe76b5f6e7",
  "02333c251da559",
  "0724f54e124525",
  "0dda79162d7df6",
  "0735107c178118",
  "08e432408d7584",
  "1409aa6cbc5f7e",
  "19cded039c6ead",
  "0e2ae9d07f05ea",
  "122a03cf5598bb",
  "0f9d4d1df237b5",
  "000b336efe0194",
  "195bde2dc7dd1c",
  "1f5f7077a9c8c3",
  "0f1c67bc8f569f",
  "15ce3f7590c0d9",
  "00e5a2d003abc4",
  "15485ed93b4c55",
  "036e3fb1953798",
  "1eb99fe373229b",
  "1c18918c11a3ba",
  "1dc5e2645355e5",
  "011c9e4ef73edb",
  "1316c8e405401c",
  "188a26cf4b09f1",
  "0a4d635665511e",
  "1d1eceeb12e5c8",
  "1decdfe9a708b9",
  "0926817b11df2f",
  "1e854eae8062d3",
  "196f06e933ad95",
  "1de247ab4a7b6a",
  "07432f30c31f43",
  "0ad3b1998f07ba",
  "1d6f4cae2470f0",
  "182b60197aedde",
  "1c43051ab38090",
  "071cba54977c49",
  "034f0feefd2480",
  "0e639e0a0d650f",
  "0f75b3cd109aad",
  "1e9db321bf4431",
  "10abc2fd98d4dd",
  "1609ca04f4fcae",
  "0c17d63ec14e34",
  "18870b2d942d18",
  "150e48d2243db9",
  "12fe9c30425059",
  "064c45a0e1e5bb",
  "0b660c7ae55eb8",
  "0dc555ce86ed8a",
  "0c69885ee5a5e0",
  "17e11f12a8d6d1",
  "081d042535aa78",
  "0ccbb92717001e",
  "04c4a9eeccf1e9",
  "11bc2509762be0",
  "01443bcec8b096",
  "07609590b3f9da",
  "0aa6c1a3d97581",
  "0d2d9ebdfedec3",
  "1c0d5e70c7ea76",
  "116bd6e7df8d37",
  "0137cc045aad5d",
  "0f739517a5d6a2",
  "0e1752cf94b85b",
  "194d24a718027c",
  "00560320e52d2d",
  "05b416a3d9eeec",
  "1c4a8da4a17a35",
  "1b44d6bd1c661e",
  "02be499fd52629",
  "039892ed4f73c9",
  "16099dab20f1bd",
  "0f688db5d26967",
  "0771415535bde5",
  "12a026d94c427f",
  "0f6aacabf76207",
  "10ba2d37cc90d7",
  "1e5983f759ecb5",
  "0da3b920cbd847",
  "0a6aa51708268e",
  "08099d67a6df17",
  "19d264c916ed5f",
  "0f5b8c0ae607f2",
  "19854cfe13548b",
  "127576a1903a92",
  "13e789fe8f4739",
  "03326c68c4ffd9",
  "04c63879c09ac5",
  "0d6ed8705ea26a",
  "041b05d5c876ae",
  "0c5e90c02553fd",
  "003eec2d8b93b4",
  "1b39c304dabd0e",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "10e660a3b8f458",
  "074ee3a734c79f",
  "10efbd9c3a8d31",
  "124c1af95f28ba",
  "0c9a9068787403",
  "1f25ba686d6596",
  "1dc0597292d059",
  "0c68284c6b45a6",
  "0af1d1e7f6ddff",
  "06115988841a65",
  "1af3bf3969f54f",
  "0645d249da6b5c",
  "1f7f491345b135",
  "0de369134228f9",
  "190927583c8d2b",
  "1a5fa60e9e04c4",
  "1bbd5c7336862f",
  "06fbc8195b77b2",
  "14f66a05704bbf",
  "0bb7a2ad2511c6",
  "0fc67711677894",
  "16cac88ab114b2",
  "118fa3bd7d6336",
  "0e0a71d791a8d1",
  "1b1261ae23106e",
  "0ac5c3ca6cf139",
  "16da1c69f40bc3",
  "06897c3d33d8b6",
  "1db4c8476fca25",
  "0cb19440f64f05",
  "0ed5b8c67ae125",
  "143ce0723b280b",
  "14b811fe796be4",
  "0c79bc85feaca9",
  "0a1294f17c6f80",
  "15943207a5dba2",
  "00ed0a2b4c645b",
  "1f693bf4b476c5",
  "1ede1c5110ccc9",
  "144fd1168c154c",
  "14d0a8d48e2b63",
  "0d9b0e13f3c8f1",
  "03ba0df8cbf0ae",
  "0dc09cb8b449f5",
  "15ff390f03db00",
  "156412c2d6ef76",
  "14f2464296cd5b",
  "17b8c73e7902c4",
  "11ffc31aa916b4",
  "0456346525df8e",
  "01f0649a225e45",
  "1b22f77e8a07f8",
  "0e1be3fa2db9a8",
  "03f97d98ba9157",
  "0559272ad9e441",
  "17338a62850b34",
  "010765a2c82bb2",
  "02e3d1d0abd2c2",
  "0e7df4da27055c",
  "0379ca22400a7a",
  "088ea89c5d8665",
  "10b3e9434bb7be",
  "1811fc8c0fbe7b",
  "1d086bb6e6721b",
  "128e6066e005da",
  "00b0c9f673261a",
  "0264d75ae977ed",
  "0d220c67a1c07e",
  "0e37277b143030",
  "05c41ee1a4ca43",
  "111e6950763daf",
  "10d4cb3fa8782f",
  "188b0c7aa7d19a",
  "1ea2cb90ece2b8",
  "14b7f963ff6e53",
  "1cae8b91a24c2f",
  "19fb83acbfbbbe",
  "0f0a59c471d17f",
  "10c79b4d954ecc",
  "17f63186e7f9f8",
  "037702f470ecb6",
  "05392735105ff7",
  "1a824a230f38aa",
  "0a2fdbfffd0859",
  "00a27610a250ad",
  "04ab9edf353f28",
  "1c26225aa5b60c",
  "091725a11f6aa5",
  "15ad936b68af9a",
  "0791bc7b42f887",
  "0cb1f4ba1d210e",
  "0efc749bd4ea64",
  "0f27c4e6bdcf37",
  "1658a090af9fb6",
  "064938f19d5201",
  "12984971d6cbce",
  "0d6a5baac835a2",
  "0a1b85ef7f6a37",
  "0863c83c5879b3",
  "108377df54a7c1",
  "08ba17f3f69db5",
  "09abc92ad14e1b",
  "1bda1d754c1dd7",
  "048d24c940797a",
  "1a39cd564e8032",
  "0f376f341000d6",
  "0616736f1946d3",
  "0b0c8ea0f7aec1",
  "165bfa2ef63437",
  "102fecf7e0f467",
  "09c4e1a1737633",
  "1409aa6cbc5f7e",
  "0c958591334e11",
  "0aef75d146b3b2",
  "1c3f8464e97167",
  "1caf5749fb3f4b",
  "04e35233383a08",
  "14b5cdbbd89c75",
  "08e71df5dfae18",
  "0fb25eed1156a6",
  "15ce3f7590c0d9",
  "1cdb9384de4295",
  "15485ed93b4c55",
  "16c68a4416da0b",
  "0386ab58a43709",
  "0aa0c8635e315c",
  "0cb98fa9beb235",
  "090b998185a2cb",
  "1e027c28a6cdcb",
  "188a26cf4b09f1",
  "0e3fcf2fe878f5",
  "18787358f8b195",
  "1d35d1bba6fd87",
  "06bed72c93c6db",
  "1c4f9e1acf7918",
  "196f06e933ad95",
  "129e0c55ebb479",
  "0c6ef1922a6fc9",
  "0c96997c9658d8",
  "14bc4d8e0570c6",
  "182b60197aedde",
  "1c4cdeaf914658",
  "071cba54977c49",
  "08775ddf2cda1e",
  "0d89c26b40a392",
  "033c7681e2568f",
  "1e9db321bf4431",
  "1ab947158862b5",
  "1b558c89365a42",
  "0b00c6f785a73d",
  "0ec5fbb13330d5",
  "057ea5f0397f68",
  "1bae232d9a2d5c",
  "02467b40613352",
  "0bf2a125e4acf8",
  "13ef4b7985a117",
  "0e2417eda4f265",
  "1609b9f2ec7a15",
  "195b8f0b34b1ba",
  "01f31effccf039",
  "04b74ef8715fff",
  "1265bab1ffd189",
  "155166f0c30891",
  "1e7b2d7be3033f",
  "0aa6c1a3d97581",
  "1ce26d4a68595c",
  "1c0d5e70c7ea76",
  "0919d781acec62",
  "194f3eb6791ea3",
  "1c110df6846fbd",
  "0e1752cf94b85b",
  "1715eb4d85b477",
  "14a79ad227ef5b",
  "034bc658371eac",
  "097363148781ca",
  "02e3c0811a438a",
  "19e611d554aa3c",
  "0f3f0fe5704845",
  "16099dab20f1bd",
  "040675e6518dd8",
  "1d0df1aace3260",
  "12a026d94c427f",
  "0f6aacabf76207",
  "01432051655a38",
  "1f0ae821a7a443",
  "0f8d363ab7447b",
  "1fc4d4a5eb30b4",
  "1b9581c08aba75",
  "0dd2ff7531f227",
  "01ab626455f3c2",
  "1a3907d86836f8",
  "1cab43a59b6d1a",
  "10b38d66192c97",
  "01877b54f47e2b",
  "1a0de5c52cd25c",
  "0d6ed8705ea26a",
  "0ebd01cce2e3b2",
  "122f9a8e95ebbf",
  "0b7fb9f4d4d9c0",
  "18f06799a6827b",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "08943c8b8ce9f9",
  "074ee3a734c79f",
  "0ed01dfe7e46c4",
  "14099c0da319b0",
  "0925c4b7dc6019",
  "14d52042a54926",
  "1dc0597292d059",
  "1916fb8cd384a2",
  "0af1d1e7f6ddff",
  "06115988841a65",
  "1af3bf3969f54f",
  "04022e09bd4c9c",
  "08ebe059dddac0",
  "17b90721f1904d",
  "07e75ef2197ccb",
  "0dbfbbbb45c618",
  "1bbd5c7336862f",
  "0c206f98f57e77",
  "0a4bc8f96617cd",
  "1a653b28d330c4",
  "0a76f4b49ef9b2",
  "16cac88ab114b2",
  "07712109d689c0",
  "0e0a71d791a8d1",
  "1796583ca915a4",
  "0d44992bbf9ceb",
  "1f51a95d26e9a7",
  "0ae3779d3e36ae",
  "0edbf278672742",
  "0cb19440f64f05",
  "17c960431a475b",
  "0e4bd3d1592472",
  "17c9e604006d53",
  "0b061b7af31f89",
  "0606fcfd19c0db",
  "15943207a5dba2",
  "197ac3fc5e9969",
  "1f693bf4b476c5",
  "1c194f27c1c80b",
  "1308de259c8ee1",
  "010c18032b4eec",
  "020fea4b5e53d7",
  "1b5558b83d0289",
  "12b1c197270d10",
  "15ff390f03db00",
  "0234609fe4708a",
  "13d1bde616e338",
  "17b8c73e7902c4",
  "0f5a106c46daff",
  "0456346525df8e",
  "0313b787d54a0b",
  "1b22f77e8a07f8",
  "09faf45c1beefb",
  "03f97d98ba9157",
  "1fca2852d5ba07",
  "0ed9186fac726e",
  "18b39be25161d3",
  "02e3d1d0abd2c2",
  "138c3b668c6c23",
  "0379ca22400a7a",
  "19d816ebc51ca4",
  "002c96be6954d3",
  "1746ecb19c2883",
  "1d086bb6e6721b",
  "1a8d06acd99b03",
  "00b0c9f673261a",
  "1c00603c163eae",
  "012e64fe64964a",
  "0e37277b143030",
  "03f25749460501",
  "10fee50d659c2c",
  "1157e555dcbbb3",
  "0620834b34a77a",
  "0cfa023bec5de2",
  "174fd72ec9e67c",
  "0846dca8f85db5",
  "023348f294d0a0",
  "0eaf87dcc02ecd",
  "10c79b4d954ecc",
  "06ee2c1d18838d",
  "1ee789649eaf74",
  "05392735105ff7",
  "127a395adbf7c9",
  "048a9d5f782129",
  "0dd0349d84cff7",
  "18d018dff249ca",
  "1664ffd8fd5d72",
  "191c3c69637a61",
  "17e06bc8a9dd48",
  "11be06260b6186",
  "1754062606d146",
  "0efc749bd4ea64",
  "0d90fa84d2b6c6",
  "1658a090af9fb6",
  "064938f19d5201",
  "12984971d6cbce",
  "0d6a5baac835a2",
  "15de21adab79e0",
  "0863c83c5879b3",
  "0ceef63f391459",
  "02f912beaaadca",
  "1fb3d938555251",
  "1bda1d754c1dd7",
  "048d24c940797a",
  "1a5b38430fe80a",
  "0f376f341000d6",
  "02333c251da559",
  "0724f54e124525",
  "0dda79162d7df6",
  "102fecf7e0f467",
  "09c4e1a1737633",
  "1409aa6cbc5f7e",
  "0c958591334e11",
  "0e2ae9d07f05ea",
  "122a03cf5598bb",
  "0f9d4d1df237b5",
  "000b336efe0194",
  "14b5cdbbd89c75",
  "1f5f7077a9c8c3",
  "0f1c67bc8f569f",
  "15ce3f7590c0d9",
  "00e5a2d003abc4",
  "15485ed93b4c55",
  "036e3fb1953798",
  "1eb99fe373229b",
  "1c18918c11a3ba",
  "1dc5e2645355e5",
  "011c9e4ef73edb",
  "1e027c28a6cdcb",
  "188a26cf4b09f1",
  "0a4d635665511e",
  "1d1eceeb12e5c8",
  "1decdfe9a708b9",
  "06bed72c93c6db",
  "1e854eae8062d3",
  "196f06e933ad95",
  "1de247ab4a7b6a",
  "07432f30c31f43",
  "0c96997c9658d8",
  "14bc4d8e0570c6",
  "182b60197aedde",
  "1c43051ab38090",
  "071cba54977c49",
  "08775ddf2cda1e",
  "0e639e0a0d650f",
  "0f75b3cd109aad",
  "1e9db321bf4431",
  "10abc2fd98d4dd",
  "1609ca04f4fcae",
  "0c17d63ec14e34",
  "18870b2d942d18",
  "150e48d2243db9",
  "12fe9c30425059",
  "064c45a0e1e5bb",
  "0bf2a125e4acf8",
  "0dc555ce86ed8a",
  "0c69885ee5a5e0",
  "1609b9f2ec7a15",
  "195b8f0b34b1ba",
  "01f31effccf039",
  "04c4a9eeccf1e9",
  "11bc2509762be0",
  "155166f0c30891",
  "07609590b3f9da",
  "0aa6c1a3d97581",
  "0d2d9ebdfedec3",
  "1c0d5e70c7ea76",
  "116bd6e7df8d37",
  "0137cc045aad5d",
  "0f739517a5d6a2",
  "0e1752cf94b85b",
  "194d24a718027c",
  "00560320e52d2d",
  "05b416a3d9eeec",
  "1c4a8da4a17a35",
  "1b44d6bd1c661e",
  "02be499fd52629",
  "0f3f0fe5704845",
  "16099dab20f1bd",
  "040675e6518dd8",
  "0771415535bde5",
  "12a026d94c427f",
  "0f6aacabf76207",
  "10ba2d37cc90d7",
  "1e5983f759ecb5",
  "0f8d363ab7447b",
  "0a6aa51708268e",
  "1b9581c08aba75",
  "19d264c916ed5f",
  "0f5b8c0ae607f2",
  "19854cfe13548b",
  "127576a1903a92",
  "13e789fe8f4739",
  "03326c68c4ffd9",
  "04c63879c09ac5",
  "0d6ed8705ea26a",
  "041b05d5c876ae",
  "0c5e90c02553fd",
  "003eec2d8b93b4",
  "1b39c304dabd0e",
]
`;
